Add LN-Address resolution to `http_resolver`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ features = ["std", "http"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-http = ["reqwest" ,"base64", "std"]
+http = ["reqwest" ,"base64", "std", "serde"]
 std = ["dnssec-prover"]
 default = ["std"]
 
@@ -24,8 +24,9 @@ lightning = { version = "0.1", default-features = false, features = ["dnssec"] }
 bitcoin = { version = "0.32", default-features = false }
 getrandom = { version = "0.3", default-features = false }
 dnssec-prover = { version = "0.6", default-features = false, optional = true, features = ["validation", "std", "tokio"] }
-reqwest = { version = "0.11", default-features = false, optional = true, features = ["rustls-tls-webpki-roots"] }
+reqwest = { version = "0.11", default-features = false, optional = true, features = ["rustls-tls-webpki-roots", "json"] }
 base64 = { version = "0.22", default-features = false, optional = true, features = ["alloc"] }
+serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
 
 [dev-dependencies]
 tokio = { version = "1.0", default-features = false, features = ["rt", "macros"] }
