--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ features = ["std", "http"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-http = ["reqwest" ,"base64", "std", "serde"]
+http = ["reqwest" ,"base64", "std", "serde", "serde_json"]
 std = ["dnssec-prover"]
 default = ["std"]
 
@@ -27,6 +27,7 @@ dnssec-prover = { version = "0.6", default-features = false, optional = true, fe
 reqwest = { version = "0.11", default-features = false, optional = true, features = ["rustls-tls-webpki-roots", "json"] }
 base64 = { version = "0.22", default-features = false, optional = true, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
+serde_json = { version = "1.0", default-features = false, optional = true, features = ["alloc"] }
 
 [dev-dependencies]
 tokio = { version = "1.0", default-features = false, features = ["rt", "macros"] }
