Drop explicit `base64` dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ features = ["std", "http"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-http = ["reqwest" ,"base64", "std", "serde", "serde_json"]
+http = ["reqwest", "std", "serde", "serde_json"]
 std = ["dnssec-prover"]
 default = ["std"]
 
@@ -25,7 +25,6 @@ bitcoin = { version = "0.32", default-features = false }
 getrandom = { version = "0.3", default-features = false }
 dnssec-prover = { version = "0.6", default-features = false, optional = true, features = ["validation", "std", "tokio"] }
 reqwest = { version = "0.11", default-features = false, optional = true, features = ["rustls-tls-webpki-roots", "json"] }
-base64 = { version = "0.22", default-features = false, optional = true, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
 serde_json = { version = "1.0", default-features = false, optional = true, features = ["alloc"] }
 
