Add an onion message-based DNSSEC HRN Resolver
Doing HRN resolution natively over the normal internet tends to be
horrendous for privacy. One of the main motivations for BIP 353 was
to limit the impacts of this by allowing for easier proxying of DNS
requests.

Here we add one such proxied request, specifically using lightning
onion messages to do the DNS requests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,14 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 http = ["reqwest", "std", "serde", "serde_json"]
-std = ["dnssec-prover"]
+std = ["dnssec-prover", "getrandom"]
 default = ["std"]
 
 [dependencies]
 lightning-invoice = { version = "0.33", default-features = false }
 lightning = { version = "0.1", default-features = false, features = ["dnssec"] }
 bitcoin = { version = "0.32", default-features = false }
-getrandom = { version = "0.3", default-features = false }
+getrandom = { version = "0.3", default-features = false, optional = true }
 dnssec-prover = { version = "0.6", default-features = false, optional = true, features = ["validation", "std", "tokio"] }
 reqwest = { version = "0.11", default-features = false, optional = true, features = ["rustls-tls-webpki-roots", "json"] }
 serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
@@ -30,3 +30,5 @@ serde_json = { version = "1.0", default-features = false, optional = true, featu
 
 [dev-dependencies]
 tokio = { version = "1.0", default-features = false, features = ["rt", "macros"] }
+lightning = { version = "0.1", features = ["std"] }
+lightning-net-tokio = { version = "0.1", default-features = false }
